yet another analysis fixes

--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -32,7 +32,7 @@
 
 \Proof
 
-Предположим, что функция не ограничена. Для определенности, сверху (снизу аналогично).
+Предположим, что множество значений не ограничено. Для определенности, сверху (снизу аналогично).
 
 Для каждого
 $n\in\mathbb{N}$ существует $a_n\in[a,b]$ такое, что
