--- a/solutions/analysis/3.tex
+++ b/solutions/analysis/3.tex
@@ -41,19 +41,23 @@
     y^* = \lim\limits_{n \to \infty} f(a_n) = \lim\limits_{n \to \infty} f(b_n) = f(x^*) = y^*
 \end{equation*}
 
-\textbf{Вариант 2}
+\textbf{Вариант 2 (идейно схожий, но более аккуратный)}
 
-Без ограничения общности считаем $f(a)\le y^*\le f(b)$ (иначе меняем $a$ и $b$ местами).
-Рассмотрим множество
+
+Покажем сначала, что если $f(a)f(b) < 0$, то существует такое $c \in (a,b)$, что $f(c) = 0$. Можно считать, что $f(a) < 0 < f(b)$ (иначе заменим $f$ на $-f$). Определим индуктивно $\{[a_n, b_n]\}$. Положим $[a_1, b_1] = [a, b]$ и
+
 \[
-S=\{x\in[a,b]:\ f(x)\le y^*\}.
+[a_{k+1}, b_{k+1}] =
+\begin{cases}
+\left[a_k, \dfrac{a_k + b_k}{2}\right], & \text{если } f\left(\dfrac{a_k + b_k}{2}\right) \geqslant 0, \\
+\left[\dfrac{a_k + b_k}{2}, b_k\right], & \text{если } f\left(\dfrac{a_k + b_k}{2}\right) < 0.
+\end{cases}
 \]
-Оно непусто (так как $a\in S$) и ограничено сверху, значит существует $x^*=\sup S\in[a,b]$.Покажем, что $f(x^*)=y^*$.
-\begin{itemize}
-    \item Если бы $f(x^*)<y^*$, то по непрерывности $f$ нашлась бы окрестность $U_\delta(x^*)$, на которой $f(x)<y^*$, и тогда для некоторых $x>x^*$ тоже было бы $x\in S$, что противоречит тому, что $x^*$ — верхняя грань $S$.
-    \item Если бы $f(x^*)>y^*$, то по непрерывности $f$ нашлась бы окрестность $U_\delta(x^*)$, на которой $f(x)>y^*$, и тогда точки $x<x^*$, достаточно близкие к $x^*$, не попадали бы в $S$, что противоречит определению супремума (в $S$ должны находиться элементы сколь угодно близко к $x^*$ слева).
-\end{itemize}
-Значит, $f(x^*)=y^*$.
+
+Таким образом определена стягивающаяся последовательность отрезков $\{[a_n, b_n]\}$, такая что $f(a_n) < 0 \leqslant f(b_n)$. По теореме Кантора о вложенных отрезках существует точка $c$ — общая для всех отрезков $[a_n, b_n]$, причём $a_n \to c$ и $b_n \to c$. Функция $f$ непрерывна в точке $c$, поэтому $f(c)$ является пределом как $f(a_n) < 0$, так и $f(b_n) \geqslant 0$. Тогда $f(c) \leqslant 0 \leqslant f(c)$, т.е. $f(c) = 0$.
+
+Докажем общий случай. Если $s$ совпадает с $f(a)$ или $f(b)$, то в качестве точки $c$ можно взять $a$ или $b$ соответственно. В противном случае рассмотрим функцию $g = f - s$. Функция $g$ непрерывна и $g(a)g(b) < 0$. По доказанному существует $c \in (a,b)$, что $g(c) = 0$, т.е. $f(c) = s$.
+
 
 \Endproof
 
