--- a/solutions/analysis/5.tex
+++ b/solutions/analysis/5.tex
@@ -10,6 +10,160 @@
     r^n_{x_0}[f](x) \overset{def}{=} f(x) - T_{x_0}^n[f](x), x \in U_{\delta_0}(x_0)
 \end{equation*}
 
+\Note Ниже представлены разные подходы к доказательству от разных лекторов. Утверждения одинаковы, отличается лишь способ доказательства.
+
+\subsubsection{Вариант Редкозубова}
+
+\Theor{Формула Тейлора с остаточным членом в форме Пеано} Пусть $\exists f^{(n)}(x_0) \in \R$, тогда:
+\begin{equation*}
+    f(x) = \sum\limits_{k=0}^n \frac{f^{(k)}(x_0)}{k!} (x - x_0)^k + o((x - x_0)^n), x \to x_0
+\end{equation*}
+
+\Proof
+
+\textbf{Индукция по $n$.} При $n=1$ равенство верно по определению дифференцируемости функции в точке $x_0$. Предположим, что утверждение верно для $n-1$, то есть для любой функции, имеющей производные до порядка $n-1$ включительно в окрестности $x_0$, справедливо разложение:
+
+\[
+f(x) = f(x_0) + f'(x_0)(x - x_0) + \dots + \frac{f^{(n-1)}(x_0)}{(n-1)!}(x - x_0)^{n-1} + o((x - x_0)^{n-1}) \quad \text{при } x \to x_0.
+\]
+
+Рассмотрим функцию
+
+\[
+\varphi(x) = f(x) - f(x_0) - f'(x_0)(x - x_0) - \dots - \frac{f^{(n)}(x_0)}{n!}(x - x_0)^n.
+\]
+
+Тогда её производная имеет вид:
+
+\[
+\varphi'(x) = f'(x) - f'(x_0) - f''(x_0)(x - x_0) - \dots - \frac{f^{(n)}(x_0)}{(n-1)!}(x - x_0)^{n-1}.
+\]
+
+Применим предположение индукции к функции $f'$ (которая, по условию, имеет непрерывные производные до порядка $n-1$):
+
+\[
+f'(x) = f'(x_0) + f''(x_0)(x - x_0) + \dots + \frac{f^{(n)}(x_0)}{(n-1)!}(x - x_0)^{n-1} + o((x - x_0)^{n-1}), \quad x \to x_0.
+\]
+
+Подставляя это выражение в формулу для $\varphi'(x)$, получаем:
+
+\[
+\varphi'(x) = o((x - x_0)^{n-1}) \quad \text{при } x \to x_0.
+\]
+
+Зафиксируем произвольное $\varepsilon > 0$. Тогда существует $\delta > 0$ такое, что для всех $x \in \mathbb{R}$, удовлетворяющих условию $|x - x_0| < \delta$, выполняется оценка:
+
+\[
+|\varphi'(x)| \leq \varepsilon |x - x_0|^{n-1}.
+\]
+
+Теперь применим теорему Лагранжа (или неравенство Коши — Лагранжа) к функции $\varphi$ на отрезке с концами $x_0$ и $x$ (без потери общности считаем $x > x_0$; случай $x < x_0$ аналогичен). Существует $\xi \in (x_0, x)$, такое что:
+
+\[
+|\varphi(x) - \varphi(x_0)| = |\varphi'(\xi)| \cdot |x - x_0|.
+\]
+
+Поскольку $\varphi(x_0) = 0$, получаем:
+
+\[
+|\varphi(x)| = |\varphi'(\xi)| \cdot |x - x_0| \leq \varepsilon |\xi - x_0|^{n-1} \cdot |x - x_0| \leq \varepsilon |x - x_0|^{n-1} \cdot |x - x_0| = \varepsilon |x - x_0|^n,
+\]
+
+где последнее неравенство следует из того, что $|\xi - x_0| < |x - x_0| < \delta$.
+
+Таким образом, для любого $\varepsilon > 0$ найдётся $\delta > 0$, такое что при $|x - x_0| < \delta$ выполнено $|\varphi(x)| \leq \varepsilon |x - x_0|^n$, что означает:
+
+\[
+\varphi(x) = o((x - x_0)^n) \quad \text{при } x \to x_0.
+\]
+
+Следовательно,
+
+\[
+f(x) = f(x_0) + f'(x_0)(x - x_0) + \dots + \frac{f^{(n)}(x_0)}{n!}(x - x_0)^n + o((x - x_0)^n),
+\]
+
+что и требовалось доказать.
+
+\Endproof
+
+
+\Theor{Формула Тейлора с остаточным членом в форме Лагранжа} Пусть $\exists f^{(n+1)}(x), \forall x \in U_\delta(x_0)$, тогда
+\begin{equation*}
+    f(x) = \sum\limits_{k=0}^n \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k + \frac{f^{(n+1)}(\xi)}{(n+1)!} (x - x_0)^{n+1}, \xi \in (x_0, x)
+\end{equation*}
+
+\Proof
+
+
+\textbf{Пусть для определённости $x > x_0$.} Рассмотрим функции
+
+\[
+\varphi(t) = f(t) + f'(t)(x - t) + \dots + \frac{f^{(n)}(t)}{n!}(x - t)^n, \quad \psi(t) = (x - t)^{n+1},
+\]
+
+определённые на отрезке $[x_0, x]$. Обе функции дифференцируемы на $[x_0, x]$ и непрерывны на этом отрезке. Вычислим их производные:
+
+\[
+\varphi'(t) = f'(t) - f'(t) + f''(t)(x - t) - f''(t)(x - t) + \dots + \frac{f^{(n+1)}(t)}{n!}(x - t)^n,
+\]
+
+что после сокращения всех парных слагаемых даёт:
+
+\[
+\varphi'(t) = \frac{f^{(n+1)}(t)}{n!}(x - t)^n.
+\]
+
+Аналогично,
+
+\[
+\psi'(t) = -(n+1)(x - t)^n.
+\]
+
+Заметим, что $\psi'(t) \neq 0$ при $t \in (x_0, x)$, так как $x > x_0$ и $(x - t)^n > 0$ на этом интервале.
+
+Применим к функциям $\varphi(t)$ и $\psi(t)$ на отрезке $[x_0, x]$ \textbf{теорему Коши о среднем значении}: существует точка $c \in (x_0, x)$, такая что
+
+\[
+\frac{\varphi(x) - \varphi(x_0)}{\psi(x) - \psi(x_0)} = \frac{\varphi'(c)}{\psi'(c)}.
+\]
+
+Вычислим значения:
+
+- $\varphi(x) = f(x)$ (все слагаемые с $(x - t)$ обращаются в ноль),
+- $\varphi(x_0) = \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x - x_0)^k$,
+- $\psi(x) = 0$, $\psi(x_0) = (x - x_0)^{n+1}$.
+
+Подставляя, получаем:
+
+\[
+\frac{f(x) - \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x - x_0)^k}{-(x - x_0)^{n+1}} = \frac{\dfrac{f^{(n+1)}(c)}{n!}(x - c)^n}{-(n+1)(x - c)^n}.
+\]
+
+Сокращая $(x - c)^n$ (он не равен нулю, так как $c \in (x_0, x)$), получаем:
+
+\[
+\frac{f(x) - \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x - x_0)^k}{-(x - x_0)^{n+1}} = \frac{f^{(n+1)}(c)}{-n!(n+1)}.
+\]
+
+Умножая обе части на $-(x - x_0)^{n+1}$, находим:
+
+\[
+f(x) - \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x - x_0)^k = \frac{f^{(n+1)}(c)}{(n+1)!}(x - x_0)^{n+1}.
+\]
+
+Таким образом, остаточный член формулы Тейлора в форме Лагранжа имеет вид:
+
+\[
+r_n(x) = \frac{f^{(n+1)}(c)}{(n+1)!}(x - x_0)^{n+1}, \quad \text{где } c \in (x_0, x).
+\]
+
+Что и требовалось доказать.
+
+\Endproof
+
+\subsubsection{Вариант Тюленева}
+
 \Lemma Верны следующие равенства:
 \begin{enumerate}
     \item $\forall k \in 0 \dots n \hookrightarrow \displaystyle \frac{d^k}{dx^k} (x - x_0)^n = \frac{n!}{(n-k)!}\,(x - x_0)^{n-k}$
