--- a/solutions/analysis/12.tex
+++ b/solutions/analysis/12.tex
@@ -1,1 +1,245 @@
 \subsection{Степенные ряды. Радиус сходимости. Бесконечная дифференцируемость суммы степенного ряда. Ряд Тейлора.}
+
+\subsubsection{Степенные ряды и радиус сходимости}
+
+\Def Степенной ряд -- функциональный ряд вида 
+
+\begin{equation*}
+    \sum_{n=0}^{\infty} c_n (z-z_0)^n,
+\end{equation*}
+
+где $c_n, z_0 \in \Cmp$, а $z$ -- комплексное переменное.
+
+\Def Радиусом сходимости степенного ряда называется
+
+\begin{equation*}
+    R = \frac{1}{\limsup_{n \to \infty} \sqrt[n]{|c_n|}}, \quad 0 \leq R \leq +\infty.
+\end{equation*}
+
+При этом если предел равен $0$ или $+\infty$, то $R$ считается равным $+\infty$ или $0$ соответственно.
+
+\Def Кругом сходимости степенного ряда называется круг 
+
+\begin{equation*}
+    \{z \in \Cmp: |z - z_0| < R\}.
+\end{equation*}
+
+При этом принимается, что при $R = +\infty$ круг сходимости равен $\R$, а при $R = 0$ он является пустым множеством.
+
+\textit{Эта формула называется формулой Коши-Адамара.}
+
+Вспомним признак Коши сходимости ряда с неотрицательными членами.
+
+\Theor{Признак Коши}
+
+Пусть $\sum_{n=1}^{\infty} b_n$ -- числовой ряд, где $b_n \geq 0 \;\forall n \in \N$, а $q = \limsup_{n \to \infty} \sqrt[n]{b_n}$.
+
+Тогда
+
+\begin{enumerate}
+    \item при $q < 1$ ряд $\sum_{n=1}^{\infty} b_n$ сходится;
+    \item при $q > 1$ ряд $\sum_{n=1}^{\infty} b_n$ расходится.
+\end{enumerate}
+
+Применим этот признак для исследования абсолютной сходимости степенного ряда:
+
+\begin{equation*}
+    q = \limsup_{n \to \infty} \sqrt[n]{|c_n z_n|} = |z| \limsup_{n \to \infty} \sqrt[n]{|c_n|} = \frac{|z|}{R}.
+\end{equation*}
+
+Отсюда получаем теорему о радиусе сходимости:
+
+\Theor{О радиусе сходимости} Если $R$ -- радиус сходимости степенного ряда, то 
+
+\begin{enumerate}
+    \item при $|z| < R$ ряд сходится, причем абсолютно;
+    \item при $|z| > R$ ряд расходится.
+\end{enumerate}
+
+\Note При $z = R$, т. е. на границе круга сходимости, ряд может как сходиться, так и расходиться.
+
+\Theor{О равномерной сходимости степенного ряда}
+
+Пусть $R$ -- радиус сходимости степенного ряда. 
+
+Тогда $\forall r \in (0, R)$ ряд сходится равномерно на замкнутом круге $\{z \in \Cmp: |z| \leq r\}$.
+
+\Proof
+
+Имеем $|c_n z^n| \leq |c_n| r^n$ при $|z| \leq r$.
+
+Если рассмотреть числовой ряд $\sum_{n=1}^{\infty} |c_n|r^n$ как степенной с коэффициентами $|c_n|$ и $z = r$, то он сходится по теореме о радиусе сходимости. То есть мы ограничили наш функциональный ряд сходящимся числовым. 
+
+По теореме Вейершрасса, исходный ряд сходится равномерно на круге $\{z \in \Cmp: |z| \leq r\}$.
+
+\Endproof
+
+\subsubsection{Дифференцирование и интегрирование степенного ряда}
+
+\Lemma Радиус сходимости ряда $\sum_{k=0}^{\infty} c_k z^k$ равен радиусу сходимости рядов $\sum_{k=1}^{\infty} kc_k z^{k-1}$ и $\sum_{k=0}^{\infty} \frac{c_k z^{k+1}}{k+1}$.
+
+\Proof
+
+Сначала покажем, что радиус сходимости $\hat{R}$ ряда $\sum_{k=1}^{\infty} k c_k z^k$ равен радиусу сходимости $R$ ряда $\sum_{k=0}^{\infty} c_k z^k$:
+
+\begin{equation*}
+    \frac{1}{\hat{R}} = \limsup_{k \to \infty} \sqrt[k]{|k c_k|} = \limsup{k \to \infty} \sqrt[k]{k} \cdot \limsup_{k \to \infty} \sqrt[k]{|c_k|} = \limsup_{k \to \infty} \sqrt[k]{|c_k|} = \frac{1}{R},
+\end{equation*}
+
+так как $\lim\limits_{k \to \infty} \sqrt[k]{k} = \lim_{k \to \infty} e^{\frac{\ln k}{k}} = 1$.
+
+А теперь, предполагая, что $z \neq 0$ (случай $z=0$ тривиален), рассмотрим частичные суммы $S_n = \sum_{k=1}^n c_k k z^{k-1}$ и $\hat{S}_n = \sum_{k=1}^n c_k k z^k$.
+
+Так как $\hat{S}_n = S_n z$, то $\exists \lim\limits_{n \to \infty} S_n \iff \exists \lim\limits_{n \to \infty} \hat{S}_n$, причем если они существуют, то они $S = \hat{S} z$.
+
+Для формального дифференцирования доказали. А для интегрирования, мы только что показали, что радиус сходимости исходного ряда обязан быть равен радиусу сходимости формально продифференцированного, откуда радиус сходимости исходного ряда обязан быть равен радиусу сходимости формально проинтегрированного.
+
+\Endproof
+
+Далее будем работать с вещественными степенными рядами
+
+\Theor{О почленном интегрировании и дифференцировании степенного ряда}
+
+Пусть $\{c_k\} \subset \R$ и $x_0 \in \R$. Пусть внутри круга сходимости степенной ряд сходится к некоторой функции $f$: $f(x)=\sum_{k=0}^{\infty} c_k (x-x_0)^k$.
+
+Тогда внутри интервала сходимости ($\forall x \in (x_0 - R, x_0 + R)$) степенной ряд
+
+\begin{enumerate}
+    \item можно почленно интегрировать, то есть 
+    \begin{equation*}
+        \int_{x_0}^x f(t)dt = \sum_{k=0}^{\infty} \frac{c_k}{k+1} (x-x_0)^{k+1});        
+    \end{equation*}
+
+    \item можно сколь угодно много раз почленно дифференцировать, то есть 
+    \begin{equation*}
+        \forall n \in \N \; f^{(n)}(x) = \sum_{k=n}^{\infty} k(k-1)\dots(k-(n-1)) c_k (x-x_0)^{k-n};    
+    \end{equation*}
+
+    \item $c_k = \frac{f^{(k)}(x_0)}{k!}$.
+\end{enumerate}
+
+\Proof
+
+\textbf{Интегрирование}: Так как $c_k (x-x_0)^k$ -- непрерывная функция от $x$ для любого $k \in \N$, а $\forall r \in (0, R)$ ряд сходится равномерно на $[x_0 - r, x_0 + r]$ по теореме о круге сходимости, то мы можем проинтегрировать сумму $f(x)$ в любой точке $x \in [x_0 - r, x_0 + r]$:
+
+\begin{equation*}
+    \int_{x_0}^x f(t)dt = \sum_{k=0}^{\infty} c_k \int_{x_0}^x (t - x_0)^k dt = \sum_{k=0}^{\infty} \frac{c_k}{k+1} (x-x_0)^{k+1}.
+\end{equation*}
+
+
+\textbf{Дифференцирование}: зафиксируем $r \in (0, R)$. По предыдущей лемме ряд $\sum_{k=1}^{\infty} c_k k (x-x_0)^{k-1}$ имеет тот же радиус сходимости, что и исходный ряд, а значит сходится равномерно на $[x_0 - r, x_0 + r]$. Также заметим, что выражение под суммой является производной по $x$ выражения под суммой в исходном ряду.
+
+По теореме о дифференцировании функционального ряда, предельная функция дифференцируема и ряд можно почленно дифференцировать, если ряд из производных сходится равномерно, а ряд исходных функций сходится хотя бы в одной точке. Мы попадаем в эти условия. Получаем, что $\forall x \in (x_0 - R, x_0 + R) \;\exists f'(x) = \sum_{k=1}^{\infty} c_k k (x-x_0)^{k-1}$.
+
+Далее по индукции получаем дифференцируемость сколь угодно много раз.
+
+\textbf{Коэффициенты Тейлора}: Покажем, что $c_k = \frac{f^{(k)}(x_0)}{k!}$. 
+
+Для $k=0$: $\frac{f(x_0)}{1!} = \sum_{k=0}^{\infty} c_k (x_0 - x_0)^k = c_k$.
+
+Запишем $n$-ю производную:
+
+\begin{equation*}
+    f^{(n)}(x) = \sum_{k=n}^{\infty} c_k k(k-1)\dots(k-(n-1)) (x-x_0)^{k-n}
+\end{equation*}
+
+Возьмем $x=x_0$. 
+Тогда для всех $k > n$, $(x-x_0)^{k-n} = 0$.
+А значит 
+
+\begin{equation*}
+    f^{(n)}(x_0) = c_n n(n-1)\dots(n-(n-1)) = c_n n!
+\end{equation*}
+
+Откуда искомое $c_n = \frac{f^{(n)}(x_0)}{n!}$.
+
+\Endproof
+
+\subsubsection{Ряд Тейлора}
+
+\Def Пусть $\exists f^{(n)}(x_0) \in \R$. Тогда
+
+\begin{itemize}
+    \item $T_{x_0}^n [f](x) \coloneqq \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k$ -- полином Тейлора;
+    \item $r_{x_0}^n [f](x) \coloneqq f(x) - T_{x_0}^n [f](x)$ -- формальный Тейлоровский остаток, или остаточный член формулы Тейлора.
+\end{itemize}
+
+\Def Пусть $x_0 \in \R$ и $\forall n \in \N \;\exists f^{(n)}(x_0) \in \R$. Тогда ряд 
+
+\begin{equation*}
+    \sum_{n=0}^n \frac{f^{(n)}(x_0)}{n!} (x-x_0)^n
+\end{equation*}
+
+называется рядом Тейлора с функции $f$ с центром в точке $x_0$.
+
+\Theor{Формула Тейлора}
+
+Пусть $x_0, x \in \R$, $f^{(n+1)} \in C([\min(x_0, x), \max(x_0, x)])$. 
+
+Тогда остаточный член формулы Тейлора можно представить:
+
+\begin{itemize}
+    \item \textit{в интегральной форме}
+    \begin{equation*}
+        r_{x_0}^n[f](x) = \frac{1}{n!} \int_{x_0}^x (x-t)^n f^{(n+1)}(t)dt,
+    \end{equation*}
+
+    \item \textit{в форме Лагранжа}
+    \begin{equation*}
+        r_{x_0}^n[f](x) = \frac{f^{(n+1)}(\xi)}{(n+1)!}(x-x_0)^{n+1}, \quad \xi \in (\min(x_0, x), \max(x_0, x)),
+    \end{equation*}
+
+    \item \textit{в форме Пеано}
+    \begin{equation*}
+        r_{x_0}^n[f](x) = o((x-x_0)^n), \quad x \to x_0.
+    \end{equation*}
+\end{itemize}
+
+\Proof
+
+Пусть для определенности $x > x_0$.
+
+\textbf{Интегральная форма}: покажем, что 
+
+\begin{equation*}
+    f(x) = \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k + \frac{1}{n!}\int_{x_0}^x (x-t)^n f^{(n+1)}(t)dt.
+\end{equation*}
+
+При $n=0$ формула верна, так как совпадает с формулой Ньютона-Лейбница: $f(x) = f(x_0) + \int_{x_0}^x f'(t)dt$.
+
+Предположим, что формула верна при $n-1$:
+
+\begin{equation*}
+    f(x) = \sum_{k=0}^{n-1} \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k + \frac{1}{(n-1)!}\int_{x_0}^x (x-t)^{(n-1)} f^{(n)}(t)dt.
+\end{equation*}
+
+Проинтегрируем интеграл в правой части по частям:
+
+\begin{gather*}
+    \frac{1}{(n-1)!} \int_{x_0}^x (x-t)^{(n-1)} f^{(n)}(t)dt = \\
+    = \left(-\frac{1}{n!}f^{(n)}(t) (x-t)^n\right)\Big|_{t=x_0}^{t=x} + \frac{1}{n!}\int_{x_0}^x (x-t)^n f^{(n+1)}(t)dt = \\
+    = \frac{1}{n!} f^{(n)}(x_0) (x-x_0)^n + \frac{1}{n!} \int_{x_0}^x (x-t)^n f^{(n+1)}(t)dt.
+\end{gather*}
+
+Подставляя этот интеграл, получаем искомый шаг индукции.
+
+\textbf{Форма Лагранжа}: Применим к интегралу из интегральной формы интегральную теорему о среднем:
+
+\begin{gather*}
+    r_{x_0}^n [f](x) = \frac{f^{(n+1)}(\xi)}{n!}\int_{x_0}^x (x-t)^n dt = \\
+    = \frac{f^{(n+1)}(\xi)}{(n+1)!}(x-x_0)^{n+1},
+\end{gather*}
+
+где $\xi$ лежит между $x$ и $x_0$.
+
+\textbf{Форма Пеано}: так как $f^{(n+1)}$ непрерывно в точке $x_0$, то она ограничена в некоторой окрестности этой точки: $\exists \delta > 0, M > 0: |f^{(n+1)}(t)| \leq M \;\forall x \in U_{\delta}(x_0)$.
+
+Тогда, ограничив $f^{(n+1)}$ сверху константой $M$ в $\delta$-окрестности точки $x_0$, покажем, что остаточный член в форме Лагранжа представим в форме Пеано:
+
+\begin{gather*}
+    \frac{r_{x_0}^n [f](x)}{|x-a|^n} = \frac{f^{(n+1)}(\xi)}{(n+1)!}|x-x_0| \leq \frac{M}{(n+1)!}|x-x_0| \to 0, \quad x \to x_0.
+\end{gather*}
+
+Итого, $r_{x_0}^n [f](x) = o((x-x_0)^n), x \to x_0$.
+
+\Endproof
