--- a/solutions/linear/17.tex
+++ b/solutions/linear/17.tex
@@ -1,1 +1,29 @@
 \subsection{Собственные значения и собственные векторы линейных преобразований. Диагонализируемость линейных преобразований.}
+\textbf{Собственные значения и собственные векторы линейных преобразований}
+Собственным вектором линейного оператора $\varphi: V \rightarrow V$ называется вектор $\boldsymbol{v} \in V, \boldsymbol{v} \neq 0 $ такой, что $\varphi(\boldsymbol{v}) = \lambda \boldsymbol{v}$ для некоторого $\lambda \in \mathbb{K}$. В этом случае $\lambda$ называется собственным значением.
+
+Заметим, что
+\begin{equation*}
+    \varphi(\boldsymbol{v}) = \lambda \boldsymbol{v} \Longleftrightarrow \varphi(\boldsymbol{v}) - \lambda \boldsymbol{v} = \boldsymbol{0} \Longleftarrow (\varphi - \lambda \text{Id})(\boldsymbol{v}) = \boldsymbol{0}
+\end{equation*}
+
+Ненулевой вектор $\boldsymbol{v}$ -- собственный с собственным значением $\lambda$ тогда и только тогда, когда он лежит в ядре преобразования $\varphi - \lambda \text{Id}$. Пространство $Ker(\varphi - \lambda \text{Id})$ называется собственным подпространством, соответствующим собственному значению $\lambda$ и обозначается $V_\lambda$. Размерность этого пространства называется геометрической кратностью собственного значения $\lambda$ и обозначается иногда $\gamma_\varphi(\lambda)$:
+\begin{equation*}
+    \gamma_\varphi(\lambda) := \text{dim}(V_\lambda)
+\end{equation*}
+Геометрическая кратность любого значения не может быть нулевой.
+
+$\lambda \in \mathbb{K}$ является собственным значением $\varphi$ тогда и только тогда, когда подпространство $V_\lambda$ нетривиально, т.е. состоит не только из нуль-вектора. Это эквивалентно вырожденности $\varphi - \lambda \text{Id}$. Это эквивалентно условию $\text{det}(\varphi - \lambda \text{Id}) = 0$. Это эквивалентно тому, что $\lambda \in \mathbb{K}$ --- корень характеристического многочлена $\chi_\varphi(t)$.
+
+\textbf{Теорема}
+$\lambda \in \mathbb{K}$ является собственным значением линейного оператора $\varphi$ в пространстве $V$ над полем $\mathbb{K}$ для какого-то собственного вектора $\boldsymbol{v}$ тогда и только тогда, когда $\lambda$ -- корень характеристического многочлена $\chi_\varphi(t)$, принадлежащий основному полю $\mathbb{K}$.
+
+Пусть $\lambda \in \mathbb{K}$ -- собственное значение $\varphi$. Алгебраическая кратность $\lambda$ -- это кратность $\lambda$ как корня $\chi_\varphi(t)$. Т.е. это максимальная степень $k$, такая что $\chi_\varphi(t)$ делится на $(t-\lambda)^k$. Обозначается иногда $\mu \varphi(\lambda)$. Геометрическая кратность собственного значения не превосходит его алгебраической кратности.
+
+\textbf{Диагонализируемость}
+Оператор $\varphi: V \rightarrow V$ называется диагонализируемым, если в каком-то базисе его матрица диагональна. Т.е. для $\varphi$ можно найти базис, состоящий из его собственных векторов. Это эквивалентно тому, что все пространство $V$ распалось в прямую сумму собственных подпространств всех собственных значений. Это эквивалентно тому, что сумма геометрических кратностей все собственных значений оператора равна размерности всего подпространства:
+\begin{equation*}
+    n = \sum_{i=1}^{\sigma(\varphi)} \gamma_\varphi(\lambda_i)
+\end{equation*}
+
+\textbf{Теорема} Оператор $\varphi: V \rightarrow V$ диагонализируем тогда и только тогда, когда сумма геометрических кратностей всех собственных значений $\varphi$ оказалась равна размерности $V$. В этом случае диагонализирующий базис можно получить, выбрав в каждом собственном подпространстве $V_{\lambda_i}$ базис. В этом базисе (из собственных векторов) оператор имеет диагональную матрицу с собственными значениями на диагонали.
