--- a/solutions/linear/18.tex
+++ b/solutions/linear/18.tex
@@ -1,7 +1,7 @@
 \subsection{Самосопряженные преобразования евклидовых пространств, свойства их собственных значений и собственных векторов.}
 Пусть $V$ --- евклидово пространство со скалярным произведением $\langle \cdot, \cdot \rangle, \varphi: V \rightarrow V$ -- линейный оператор. Линейный оператор $\varphi^*: V \rightarrow V$ называют сопряженным к $\varphi$, если
 \begin{equation*}
-    \langle \varphi(\boldsymbol{u}, \boldsymbol{v}) = \langle \boldsymbol{u}, \varphi^*(\boldsymbol{v})
+    \langle \varphi(\boldsymbol{u}, \boldsymbol{v}) \rangle = \langle \boldsymbol{u}, \varphi^*(\boldsymbol{v}) \rangle
 \end{equation*}
 
 \textbf{Теорема} Для любого линейного оператора $\varphi$ над $V$ существует единственный сопряженный ему линейный оператор $\varphi^*$.
