--- a/style.tex
+++ b/style.tex
@@ -73,6 +73,7 @@
 \newcommand{\Endproof}{$\blacksquare$ }
 
 \newcommand{\tr}{\text{tr}}
+\newcommand{\sign}{\operatorname{sign}}
 \newcommand{\Le}{\leqslant}                % русский стиль нестрогих неравенств
 \newcommand{\Ge}{\geqslant}
 % облегчение математических обозначений
