make list of tickets with no subsections

--- a/solutions/analysis/10.tex
+++ b/solutions/analysis/10.tex
@@ -1,6 +1,6 @@
 \subsection{Свойства интеграла с переменным верхним пределом (непрерывность, дифференцируемость). Формула Ньютона-Лейбница.}
 
-\subsubsection{Определенный интеграл Римана}
+\textbf{Определенный интеграл Римана}
 
 \textit{Напомним вкратце самую базу про определенный интеграл Римана}.
 
@@ -52,7 +52,7 @@ $f \in R([a, b]) \iff J_*(f) = J^*(f) \in \R$.
 
 $f \in R([a, b]) \iff \exists J \in \R: \;\forall \;\eps > 0 \exists \delta > 0: \forall T: l(T) < \delta \;\forall \xi_T \hookrightarrow |J - \Sigma(f, T, \xi_T)| < \eps$.
 
-\subsubsection{Свойства определенного интеграла Римана}
+\textbf{Свойства определенного интеграла Римана}
 
 Докажем несколько простых свойств, необходимых для доказательства целевых теорем.
 
@@ -121,7 +121,7 @@ $\begin{cases*}
     \item $f(x) = sign(x)$ интегрируема по Риману по критерию Лебега, но не имеет первообразной на интервале, содержащем 0 (доказывается от противного).
 \end{enumerate}
 
-\subsubsection{Интеграл с переменным верхним пределом}
+\textbf{Интеграл с переменным верхним пределом}
 
 \Def Интегралом с переменным верхним пределом для функции $f \in R([a, b])$ называют функцию $F(x) \coloneqq \int_a^x f(t) dt$.
 
