--- a/solutions/analysis/11.tex
+++ b/solutions/analysis/11.tex
@@ -1,6 +1,6 @@
 \subsection{Равномерная сходимость функциональных последовательностей и рядов. Непрерывность, интегрируемость и дифференцируемость суммы функционального ряда.}
 
-\subsubsection{Функциональные последовательности}
+\textbf{Функциональные последовательности}
 
 \Def Пусть $X \neq \varnothing$ -- абстрактное множество. Тогда последовательность функций $\{f_n\}_{n=1}^{\infty}$, где $f_n: X \rightarrow \R \;\forall n \in \N$, называется функциональной последовательностью.
 
@@ -70,7 +70,7 @@ $f_n \overset{X}{\rightrightarrows} f, n \to \infty \;\iff\; \forall \eps > 0 \;
 
 \Endproof
 
-\subsubsection{Функциональные ряды}
+\textbf{Функциональные ряды}
 
 \Def Пусть $X \neq \varnothing$ -- абстрактное множество. Функциональным рядом будем называть пару функциональных последовательностей $\{f_n\}$ и $\{S_n\}$, где $\{f_n\}$ -- члены функционального ряда, а $S_n \coloneqq \sum_{k=1}^n f_k$ -- частичные суммы функционального ряда.
 
@@ -137,7 +137,7 @@ $S_n V_n$ равномерно стремится к 0 как произведе
 
 \Endproof
 
-\subsubsection{Непрерывность, интегрируемость и дифференцируемость суммы функционального ряда}
+\textbf{Непрерывность, интегрируемость и дифференцируемость суммы функционального ряда}
 
 \textit{Лекции 23-24 потерялись, так что часть билета ниже приведена из \href{https://old.mipt.ru/education/chair/mathematics/study/uchebniki/ЛпМА_Бесов.pdf}{учебника Бесова, параграф 16.3}.}
 
