--- a/solutions/analysis/12.tex
+++ b/solutions/analysis/12.tex
@@ -1,6 +1,6 @@
 \subsection{Степенные ряды. Радиус сходимости. Бесконечная дифференцируемость суммы степенного ряда. Ряд Тейлора.}
 
-\subsubsection{Степенные ряды и радиус сходимости}
+\textbf{Степенные ряды и радиус сходимости}
 
 \Def Степенной ряд -- функциональный ряд вида 
 
@@ -74,7 +74,7 @@
 
 \Endproof
 
-\subsubsection{Дифференцирование и интегрирование степенного ряда}
+\textbf{Дифференцирование и интегрирование степенного ряда}
 
 \Lemma Радиус сходимости ряда $\sum_{k=0}^{\infty} c_k z^k$ равен радиусу сходимости рядов $\sum_{k=1}^{\infty} kc_k z^{k-1}$ и $\sum_{k=0}^{\infty} \frac{c_k z^{k+1}}{k+1}$.
 
@@ -155,7 +155,7 @@
 
 \Endproof
 
-\subsubsection{Ряд Тейлора}
+\textbf{Ряд Тейлора}
 
 \Def Пусть $\exists f^{(n)}(x_0) \in \R$. Тогда
 
