--- a/solutions/analysis/9.tex
+++ b/solutions/analysis/9.tex
@@ -6,7 +6,7 @@
 
 В случае нестрогих неравенств, определяется точка нестрого локального экстремума.
 
-\subsubsection{Необходимое условие безусловного эктремума}
+\textbf{Необходимое условие безусловного эктремума}
 
 \Th Пусть $E$ -- открыто, $f: E \rightarrow \R$; $\forall i \in \{1, \dots, m\} \;\exists \frac{\partial f}{\partial x_i}(x^0) \in \R$. 
 
@@ -21,7 +21,7 @@
 
 \Endproof
 
-\subsubsection{Достаточное условие безусловного эктремума}
+\textbf{Достаточное условие безусловного эктремума}
 
 \Def Квадратичной формой в $\R^m$ назовем функцию $K: \R^m \rightarrow \R$
 
