--- a/solutions/linear/16.tex
+++ b/solutions/linear/16.tex
@@ -1,6 +1,6 @@
 \subsection{Линейное пространство, базис и размерность. Линейное отображение конечномерных пространств, его матрица. Ядро и образ линейного отображения.}
 
-\subsubsection{Линейное пространство}
+\textbf{Линейное пространство}
 
 \Def Пусть $\mathcal{L} \neq \varnothing, "+": \mathcal{L}^2 \to \mathcal{L}, "\cdot": \R \times \mathcal{L} \to \mathcal{L}$. 
 Будем говорить, что тройка $(\mathcal{L}, +, \cdot)$ является линейным пространством, если выполнены следующие условия:
@@ -69,7 +69,7 @@
 
 \Endproof
 
-\subsubsection{Базисы}
+\textbf{Базисы}
 
 \Def Пусть $\mathcal{L}$ - ЛП. Базисом $\mathcal{L}$ будем называть упорядоченнй конечный набор ЛЗ векторов, через которые выражается всякий вектор из $\mathcal{L}$.
 
@@ -88,7 +88,7 @@
 
 \Statement Вектора ЛЗ $\iff$ их координатные столбцы ЛЗ.
 
-\subsubsection{Размерность}
+\textbf{Размерность}
 
 \Th Пусть $\mathcal{L}$ - ЛП и $e_1, \dots e_n$ его базис $\Rightarrow$ всякий базис состоит ровно из $n$ векторов.
 
@@ -135,7 +135,7 @@
 
 \Endproof
 
-\subsubsection{Линейные отображения}
+\textbf{Линейные отображения}
 
 \Def Пусть $\mathcal{L}_1, \mathcal{L}_2$ - ЛП. Пусть $\varphi: \mathcal{L}_1 \to \mathcal{L}_2$. Будем говорить, что $\varphi$ - линейное отображение (ЛО), если выполнены следующие условия:
 \begin{enumerate}
@@ -201,7 +201,7 @@ $e_1, e_2, \dots e_n \in \mathcal{L}$ - ЛЗ $\Rightarrow e_1 = \alpha_2 e_2 + \
 
 \Endproof
 
-\subsubsection{Ядро и образ линейного отображения}
+\textbf{Ядро и образ линейного отображения}
 
 \Def Пусть $\mathcal{L}_1, \mathcal{L}_2$ - ЛП, $\varphi: \mathcal{L}_1 \to \mathcal{L}_2$ - ЛО.
 \begin{equation*}
