--- a/solutions/linear/19.tex
+++ b/solutions/linear/19.tex
@@ -1,6 +1,6 @@
 \subsection{Приведение квадратичных форм в линейном пространстве к каноническому виду. Положительно определенные квадратичные формы. Критерий Сильвестра.}
 
-\subsubsection{Приведение квадратичных форм в линейном пространстве к каноническому виду}
+\textbf{Приведение квадратичных форм в линейном пространстве к каноническому виду}
 
 \Def Пусть $\Lc$ - ЛП. Пусть $b: \Lc^2 \to \R$. $b$ будем называть биленейной формой (БФ), если:
 \begin{enumerate}
@@ -84,7 +84,7 @@
 
 \Endproof
 
-\subsubsection{Положительно определенные квадратичные формы}
+\textbf{Положительно определенные квадратичные формы}
 
 \Def Ранг квадратичной формы - это количество $\pm 1$ на диагонали матрицы в каноническом виде. Далее будем обозначать $\Rg b$.
 
@@ -120,7 +120,7 @@
 
 \Consequence $\Rg b = \dim \Lc^{(-)} + \dim \Lc^{(+)}$.
 
-\subsubsection{Критерий Сильвестра}
+\textbf{Критерий Сильвестра}
 
 \Def Сигнатурой КФ назовём разность положительных и отрицательных индексов инерции. Обозначать будем $\sign b$.
 
