make 9 ticket more obvious

--- a/solutions/analysis/9.tex
+++ b/solutions/analysis/9.tex
@@ -82,7 +82,23 @@
     \forall dx \neq 0 \; d^2_{x^0} f(dx) = ||dx||^2 \sum_i \sum_j \frac{\partial^2 f}{\partial x_i \partial x_j}(x^0) \frac{dx_i}{||dx||} \frac{dx_j}{||dx||} \geq m ||dx||^2.
 \end{equation*}
 
-В достаточно малой окрестности о-малое будет достаточно мало, чтобы $\forall x \in B_{\hat{\delta}} (x^0) \hookrightarrow f(x) \geq f(x^0) + \frac{1}{4} m ||x-x^0||^2$.
+Хотим дать оценку снизу на 
+
+\begin{equation*}
+    f(x) = f(x^0) + \frac{d^2_{x^0} f(dx)}{2} + o(||dx||^2)
+\end{equation*}
+
+$\frac{d^2_{x^0} f(dx)}{2}$, как мы выяснили, можно оценить снизу $\frac{m}{2}||dx||^2$
+
+Третье слагаемое в достаточно малом шаре $\mathring{B}_{\hat{\delta}}(x^0)$ можно оценить снизу как $-m/4 \cdot ||dx||^2$ (оно о-малое, константа может быть любой). Тогда итоговая оценка будет выглядеть так:
+
+\begin{equation*}
+\forall x \in \mathring{B}_{\hat{\delta}}(x^0) \hookrightarrow f(x) \geq f(x^0) + \frac{1}{2} m ||dx||^2 - \frac{1}{4} m ||dx||^2 = f(x^0) + \frac{1}{4} m ||x-x^0||^2
+\end{equation*}
+
+А это уже означает то, что мы получили минимум.
+
+Случай отрицательно определенной формы доказывается в точности аналогично, а также может быть сведен заменой $g = -f$ к доказанному выше.
 
 Для случая знаконеопределенности ($\exists dx^1, dx^2 \neq 0: d^2_{x^0} f(dx^1) > 0, d^2_{x^0} f(dx^2) < 0$) достаточно расписать 
 
@@ -97,6 +113,6 @@
 
 \Endproof
 
-\textit{Примеры по 4-му пункту: $f_1(x_1, x_2) = x_1^4$, $f_2(x_1, x_2) = x_1^3$. В обоих случаях квадратичные формы зануляются в $(0, 0)$, но в одном случае это точка экстремума, а в другом нет.}
+\textit{Примеры по 3-му пункту: $f_1(x_1, x_2) = x_1^4$, $f_2(x_1, x_2) = x_1^3$. В обоих случаях квадратичные формы зануляются в $(0, 0)$, но в одном случае это точка экстремума, а в другом нет.}
 
 
