--- a/solutions/analysis/10.tex
+++ b/solutions/analysis/10.tex
@@ -28,7 +28,7 @@
     \end{cases}
 \end{gather*}
 
-\Theor{Необходимое условие интегрируемости} $f \in R([a, b]) \;\Rightarrow\; f \in B([a, b])$.
+\Theor{Необходимое условие интегрируемости} $f \in R([a, b]) \;\Rightarrow\; f \in B([a, b])$ (ограничена на этом отрезке).
 
 \Theor{Критерий Лебега интегрируемости по Риману}. 
 
@@ -46,7 +46,7 @@ $f \in R([a, b]) \iff J_*(f) = J^*(f) \in \R$.
 
 \Def Для разбиения $T$ отрезка $[a, b]$ выборкой назовем конечный набор точек $\{\xi_i\}_{i=1}^{N_T}$, такой что $\forall i \in \{1, \dots, N_T\} \hookrightarrow \xi_i \in [x_{i-1}, x_i]$.
 
-Интегральная сумма Дарбу: $\Sigma(f, T, \xi_T) = \sum_{i=1}^N f(\xi_i) (x_i - x_{i-1})$.
+Интегральная сумма Римана: $\Sigma(f, T, \xi_T) = \sum_{i=1}^N f(\xi_i) (x_i - x_{i-1})$.
 
 \Theor{Критерий интегрируемости по Риману в терминах интегральных сумм Римана}
 
@@ -146,7 +146,7 @@ $|F(x_1) - F(x_2)| \leq \left|\int_{x_1}^{x_2} f(t) dt\right| \leq \int_{x_1}^{x
 \Proof
 
 \begin{gather*}
-    \left|\frac{F(x) - F(x^0)}{x - x^0} - f(x^0)\right| = \left|\frac{\int_x^{x^0} f(t) dt}{x - x^0}\right| =
+    \left|\frac{F(x) - F(x^0)}{x - x^0} - f(x^0)\right| = \left|\frac{\int_x^{x^0} f(t) dt - f(x^0) \cdot (x - x^0)}{x - x^0}\right| =
     \left|\frac{\int_x^{x^0} f(t) dt - \int_x^{x^0} f(x^0) dt}{x-x^0}\right| \leq \frac{\int_x^{x^0} |f(t) - f(x^0)| dt}{|x - x^0|}.
 \end{gather*}
 
