fix 12 ticket typo

--- a/solutions/analysis/12.tex
+++ b/solutions/analysis/12.tex
@@ -26,7 +26,7 @@
     \{z \in \Cmp: |z - z_0| < R\}.
 \end{equation*}
 
-При этом принимается, что при $R = +\infty$ круг сходимости равен $\R$, а при $R = 0$ он является пустым множеством.
+При этом принимается, что при $R = +\infty$ круг сходимости равен $\Cmp$, а при $R = 0$ он является пустым множеством.
 
 \textit{Эта формула называется формулой Коши-Адамара.}
 
